<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android">


    <EditText android:layout_width="200dp"
              android:id="@+id/nameET"
              android:hint="@string/studentname"
              android:layout_height="50dp"/>


    <EditText android:layout_width="200dp"
              android:id="@+id/idET"
              android:layout_below="@+id/nameET"
              android:hint="@string/studentid"
              android:layout_height="50dp"/>

    <EditText android:layout_width="200dp"
              android:id="@+id/courseET"
              android:hint="@string/studentcourse"
              android:layout_below="@id/idET"
              android:layout_height="50dp"/>

    <EditText android:layout_width="200dp"
              android:id="@+id/addressET"
              android:hint="@string/studentaddress"
              android:layout_below="@id/courseET"
              android:layout_height="50dp"/>

    <Button android:layout_width="100dp"
            android:layout_below="@id/addressET"
            android:id="@+id/saveBTN"
            android:drawableBottom="@drawable/ic_done_black_24dp"
            android:layout_height="50dp"/>

    <Button android:layout_width="100dp"
            android:id="@+id/photoFromGallery"
            android:layout_toRightOf="@+id/saveBTN"
            android:layout_marginTop="200dp"
            android:drawableBottom="@drawable/ic_insert_photo_black_24dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/saveBTN"/>

    <Button android:layout_width="100dp"
            android:id="@+id/photoFromCamera"
            android:drawableBottom="@drawable/ic_photo_camera_black_24dp"
            android:layout_toRightOf="@id/photoFromGallery"
            android:layout_marginTop="200dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/photoFromGallery"/>

</RelativeLayout>