<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android">

    <Button android:layout_width="150dp"
            android:id="@+id/insertBTN"
            android:text="@string/insertbutton"
            android:layout_marginLeft="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginStart="250dp"/>

    <Button android:layout_width="150dp"
            android:id="@+id/deleteBTN"
            android:layout_below="@+id/insertBTN"
            android:text="@string/deletebutton"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginStart="250dp"
            android:layout_height="50dp"/>

    <Button android:layout_width="150dp"
            android:id="@+id/searchBTN"
            android:text="@string/searchbutton"
            android:layout_below="@id/deleteBTN"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_height="50dp"
            android:layout_marginStart="250dp"/>

    <Button android:layout_width="150dp"
            android:id="@+id/getCount"
            android:text="@string/studentscounts"
            android:layout_below="@id/searchBTN"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_height="70dp"
            android:layout_marginStart="250dp"/>

  
    <TextView android:layout_width="70dp"
              android:id="@+id/studentsCount"
              android:drawablePadding="30dp"
              android:layout_below="@id/recyclerview"
              android:gravity="center"
              android:layout_height="50dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
              android:textSize="24sp"      android:textAllCaps="false" android:textStyle="bold"/>

    <TextView android:layout_width="70dp"
              android:layout_toRightOf="@+id/studentsCount"
              android:layout_marginTop="450dp"
              android:drawableLeft="@drawable/ic_person_black_24dp"
              android:layout_height="50dp" android:layout_toEndOf="@+id/studentsCount"/>

    <android.support.v7.widget.RecyclerView android:layout_width="250dp"
                                            android:id="@+id/recyclerview"
                                            android:orientation="vertical"
                                            android:padding="@dimen/default_padding"
                                            android:layout_height="450dp">
    </android.support.v7.widget.RecyclerView>


</RelativeLayout>